--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -34,6 +34,7 @@
 
               <!-- Select Input -->
               <p-select
+              variant="filled"
                 *ngIf="field.type === 'select'"
                 [options]="field.options"
                 optionLabel="label"
@@ -41,20 +42,23 @@
                 [formControlName]="field.name"
                 [placeholder]="field.placeholder || 'Select ' + field.label"
                 class="w-full"
+                
               >
               </p-select>
 
               <!-- Date Input -->
               <p-calendar
+              variant="filled"
                 *ngIf="field.type === 'date'"
                 type="date"
                 [formControlName]="field.name"
                 [placeholder]="field.placeholder || field.label"
-                class="p-inputtext p-component w-full py-2 px-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                [style]="{'width':'100%'}" [inputStyle]="{'width':'100%'}"
               />
 
               <!-- Number Input -->
               <input
+              variant="filled"
                 *ngIf="field.type === 'number'"
                 type="number"
                 [formControlName]="field.name"
@@ -154,7 +158,7 @@
   <div class="flex justify-end">
     <button
       type="submit"
-      class="mt-4 bg-[#2929b9] hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-md transition duration-200"
+      class="cursor-pointer mt-4 bg-[#2929b9] hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-md transition duration-200"
     >
       Submit
     </button>
