--- a/src/app/features/admin/add-employee/add-employee.component.html
+++ b/src/app/features/admin/add-employee/add-employee.component.html
@@ -1,1 +1,1 @@
-<app-dynamic-form [formStructure]="employeeFormStructure"></app-dynamic-form>
+<app-dynamic-form [formStructure]="employeeFormStructure" (dataEmitter)="handleFormData($event)"></app-dynamic-form>
