--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,23 +11,27 @@
   </div>
 </div> -->
 
-@if(!(isLoginPage$ | async)){
-<div class="flex flex-col h-full">
-  <div class="flex flex-1">
-    <app-sidebar />
+<div *ngIf="!(isLoginPage$ | async); else loginPage">
+  <div class="flex flex-col h-full">
+    <div class="flex flex-1">
+      <app-sidebar></app-sidebar>
 
-    <div
-      [ngStyle]="{ width: isDrawerOpen() ? 'calc(100% - 20rem)' : '100%' }"
-      class="flex-1 p-0 absolute right-0 h-screen"
-    >
-      <app-navbar />
-      <div class="p-8">
-        <router-outlet />
+      <div
+        [ngClass]="{
+          'w-[calc(100%-20rem)]': isDrawerOpen(),
+          'w-full': !isDrawerOpen()
+        }"
+        class="flex-1 p-0 absolute right-0 h-screen"
+      >
+        <app-navbar></app-navbar>
+        <div class="p-8">
+          <router-outlet></router-outlet>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-}@else {
-<router-outlet />
-}
+<ng-template #loginPage>
+  <router-outlet></router-outlet>
+</ng-template>
