--- a/src/app/core/components/typetable/typetable.component.html
+++ b/src/app/core/components/typetable/typetable.component.html
@@ -1,5 +1,5 @@
 <p-dropdown
-  [options]="banks"
+  [options]="data()"
   [(ngModel)]="selectedBank"
   placeholder="Select a Bank"
   optionLabel="name"
@@ -7,33 +7,36 @@
   [showClear]="true"
 >
 </p-dropdown>
+<button pButton label="Add Country" (click)="showDialog()"></button>
 
-<button pButton label="Add Bank" (click)="showDialog()"></button>
-
-<p-dialog header="Add New Bank" [visible]="displayDialog()">
-  <input
-    pInputText
-    [(ngModel)]="newBank.abbrivation"
-    placeholder="Abbreviation"
-    required
-  />
-  <input
-    pInputText
-    [(ngModel)]="newBank.name"
-    placeholder="Bank Name"
-    required
-  />
-  <input
-    pInputText
-    [(ngModel)]="newBank.code"
-    placeholder="Bank Code"
-    required
-  />
-  <input
-    pInputText
-    [(ngModel)]="newBank.description"
-    placeholder="Description"
-    required
-  />
-  <button pButton label="Save" (click)="addBank()"></button>
+<p-dialog header="Add New Province" [visible]="displayDialog()">
+  <div class="grid grid-cols-1 gap-4">
+    <input
+      pInputText
+      [(ngModel)]="newProvince.name"
+      placeholder="Province Name"
+      required
+    />
+    <input
+      pInputText
+      [(ngModel)]="newProvince.code"
+      placeholder="Province Code"
+      required
+    />
+    <input
+      pInputText
+      [(ngModel)]="newProvince.cid"
+      placeholder="Country ID"
+      required
+    />
+    <input
+      pInputText
+      [(ngModel)]="newProvince.description"
+      placeholder="Description"
+      required
+    />
+  </div>
+  <button pButton label="Save" (click)="addProvince()"></button>
 </p-dialog>
+
+<app-table />
